--- a/apps/poker-web/manifest.json
+++ b/apps/poker-web/manifest.json
@@ -1,6 +1,6 @@
 {
   "app_id": "poker-web",
-  "name": "ClawdCity Poker",
+  "name": "Assembler Poker",
   "kind": "game",
   "runtime": "web-static",
   "version": "0.2.0",
